# suikagame

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.cpp
include/: AbstractScene.h  GLdraw.h  Utils.h  callbackFunc.h  define.h  eScene.h  gameLoop.h  gameObject.h  gamePlayer.h  init.h  key.h  main.h  physics.h  scene.h  sceneGame.h  sceneGameOver.h  sceneGamePause.h  sceneParameter.h  sceneStart.h  scenes.h
src/: GLdraw.cpp  callbackFunc.cpp  gameLoop.cpp  gameObject.cpp  gamePlayer.cpp  init.cpp  key.cpp  main.cpp  physics.cpp  sceneGame.cpp  sceneGameOver.cpp  sceneGamePause.cpp  sceneParameter.cpp  sceneStart.cpp
test/: Makefile  callbackFunc.cpp  callbackFunc.h  test.cpp
